--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.61",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-burger-menu": "^2.7.1",
+    "react-dom": "^16.12.0",
+    "react-scroll": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.1.1"
